sudah diubah kopi klotok

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                  <!-- Item 4 -->
                  <div class="menu-item">
                     <img src="./src/kopi spesial.jpg" alt="Menu Item 1" class="menu-item-img">
-                    <h3 class="menu-item-title">Kopi Spesial</h3>
+                    <h3 class="menu-item-title">Kopi klotok</h3>
                     <p class="menu-item-description">Nikmati kopi dengan cita rasa khas dari kami.</p>
                     <span class="menu-item-price">Rp 30.000</span>
                 </div>
